package com.amazon.ata.music.playlist.service.exceptions;

public class InvalidAttributeChangeException extends PlaylistServiceException {
    public InvalidAttributeChangeException(String message) {
        super(message);
    }
}
