@startuml


class AlbumTrack

class AlbumTrackDao
class PlaylistDao
class AlbumTrackNotFoundException
class InvalidAttributeValueException
class PlaylistNotFoundException
class InvalidAttributeChangeException
class InvalidAttributeException


class AlbumTrack {
    -@DynamoDBHashKey asin : StringMT2DesignIntrospectionTests
    -@DynamoDBRangeKey trackNumber : Integer
    -albumName : String
    -songTitle : String
}

class Playlist  {
-@DynamoDBHashKey id : String
- name : String
-customerId :String
-  songCount : Integer
- tags : Set<String>
- songList : List<AlbumTrack>
}

class AlbumTrackDao {
dynamoDbMapper : DynamoDBMapper
}

class PlaylistDao {
dynamoDbMapper : DynamoDBMapper
}


class AddSongToPlaylistActivity {
handleRequest(AddSongToPlaylistRequest)
handleRequest() : AddSongToPlaylistResult

}

class CreatePlaylistActivity {
handleRequest(CreatePlaylistRequest)
handleRequest() : CreatePlaylistResult
}

class GetPlaylistActivity {
handleRequest(GetPlaylistRequest)
handleRequest() : GetPlaylistResult
}

class GetPlaylistSongsActivity {
handleRequest(GetPlaylistSongsRequest)
handleRequest() : GetPlaylistSongsResult
}

class UpdatePlaylistActivity {
handleRequest(UpdatePlaylistRequest)
handleRequest() : UpdatePlaylistResult
}

class PlaylistDao {
getPlaylist(String)
getPlaylist() : Playlist
}

class PlaylistServiceException {
}

class InvalidAttributeValueException {
}

class InvalidAttributeChangeException {
}

 AddSongToPlaylistActivity o-- AlbumTrackDao
 AddSongToPlaylistActivity o-- PlaylistDao
 CreatePlaylistActivity o-- PlaylistDao
 GetPlaylistActivity o-- PlaylistDao
 GetPlaylistSongsActivity o-- PlaylistDao
 UpdatePlaylistActivity o-- PlaylistDao
 Playlist o-- AlbumTrack

 InvalidAttributeException --|> InvalidAttributeValueException
 InvalidAttributeException --|> InvalidAttributeChangeException
 RuntimeException <|-- InvalidAttributeException
 InvalidAttributeValueException --|> PlaylistServiceException : extends
 InvalidAttributeChangeException --|> PlaylistServiceException : extends

@enduml